--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title id="test">Trivia Game</title>
+    <title>Trivia Game</title>
   </head>
   <body>
-    <div class="container text-center">
+    <div class="container text-center" id="state-1">
       <div class="row">
         <div class="col-md-12">
           <h1>Trivia Game</h1>
@@ -49,6 +49,30 @@
       </div>
     </div>
 
+<!-- Section for displaying score -->
+
+
+
+    <div class="container text-center hide" id="state-3">
+      <div class="row">
+        <div class="col-md-12">
+          <h1>Trivia Game</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <p id="final-score"></p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+          <button id="play-again">Play Again!</button>
+        </div>
+        <div class="col-md-4"></div>
+        
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
