--- a/index.html
+++ b/index.html
@@ -12,10 +12,42 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Trivia Game</title>
-  </head>
-  <body>
-    <div class="container text-center" id="state-1">
+
+<!-- starting screen is here -->
+
+<title>Trivia Game</title>
+</head>
+<body>
+  <div class="container text-center" id="state-1">
+    <div class="row">
+      <div class="col-md-12">
+        <h1>Trivia Game</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <ul id="Rules">
+          <li>This quiz has 10 questions.</li>
+          <li>You have 30 seconds to answer each one.</li>
+          <li>Your score will be displayed at the end!</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-4">
+        
+      </div>
+      <div class="col-md-4">
+        <button class="start-button">Start!</button>
+      </div>
+      <div class="col-md-4">
+      </div>
+    </div>
+</div>
+<!-- game body is here -->
+
+    <div class="container text-center hide" id="state-2">
       <div class="row">
         <div class="col-md-12">
           <h1>Trivia Game</h1>
