--- a/index.html
+++ b/index.html
@@ -13,97 +13,99 @@
     />
     <link rel="stylesheet" href="assets/css/style.css" />
 
-<!-- starting screen is here -->
+    <!-- starting screen is here -->
 
-<title>Trivia Game</title>
-</head>
-<body>
-  <div class="container text-center" id="state-1">
-    <div class="row">
-      <div class="col-md-12">
-        <h1>Trivia Game</h1>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-        <ul id="Rules">
-          <li>This quiz has 10 questions.</li>
-          <li>You have 30 seconds to answer each one.</li>
-          <li>Your score will be displayed at the end!</li>
-        </ul>
-      </div>
-    </div>
+    <title>Trivia Game</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="row text-center" id="state-1">
+        <div class="col-lg-12">
+          <div class="row">
+            <div class="col-md-12">
+              <h1>Trivia Game</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <ul id="Rules">
+                <li>This quiz has 10 questions.</li>
+                <li>You have 30 seconds to answer each one.</li>
+                <li>Your score will be displayed at the end!</li>
+              </ul>
+            </div>
+          </div>
 
-    <div class="row">
-      <div class="col-md-4">
-        
-      </div>
-      <div class="col-md-4">
-        <button class="start-button">Start!</button>
-      </div>
-      <div class="col-md-4">
-      </div>
-    </div>
-</div>
-<!-- game body is here -->
-
-    <div class="container text-center hide" id="state-2">
-      <div class="row">
-        <div class="col-md-12">
-          <h1>Trivia Game</h1>
+          <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+              <button class="btn btn-success start-button">Start!</button>
+            </div>
+            <div class="col-md-4"></div>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-12">
-          <p id="timer">30</p>
+      <!-- game body is here -->
+
+      <div class="row text-center hide" id="state-2">
+        <div class="col-lg-12">
+          <div class="row">
+            <div class="col-md-12">
+              <h1>Trivia Game</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <p id="timer">30</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <p id="question">question Lorem ipsum dolor sit amet.</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <button class="btn answer-btn " id="a1">Answer 1</button>
+            </div>
+            <div class="col-md-6">
+              <button type="button" class="btn answer-btn " id="a2">Answer 2</button>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <button class="btn answer-btn " id="a3">Answer 3</button>
+            </div>
+
+            <div class="col-md-6">
+              <button class="btn answer-btn " id="a4">Answer 4</button>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-12">
-          <p id="question">question Lorem ipsum dolor sit amet.</p>
+      <!-- Section for displaying score -->
+      <div class="row text-center hide" id="state-3">
+        <div class="col-lg-12">
+          <div class="row">
+            <div class="col-md-12">
+              <h1>Trivia Game</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <p id="final-score"></p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+              <button class="btn btn-success" id="play-again">Play Again!</button>
+            </div>
+            <div class="col-md-4"></div>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-6">
-          <button class="answer-button" id="a1">Answer 1</button>
-        </div>
-        <div class="col-md-6">
-          <button class="answer-button" id="a2">Answer 2</button>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <button class="answer-button" id="a3">Answer 3</button>
-        </div>
-
-        <div class="col-md-6">
-          <button class="answer-button" id="a4">Answer 4</button></div>
-      </div>
-    </div>
-
-<!-- Section for displaying score -->
-
-
-
-    <div class="container text-center hide" id="state-3">
-      <div class="row">
-        <div class="col-md-12">
-          <h1>Trivia Game</h1>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <p id="final-score"></p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-4"></div>
-        <div class="col-md-4">
-          <button id="play-again">Play Again!</button>
-        </div>
-        <div class="col-md-4"></div>
-        
     </div>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
